# dmm-x-poster

./: .env.sample  .gitignore  README.md  pyproject.toml
migrations/versions/: 9950074efb46_initial_migration.py
src/dmm_x_poster/: __init__.py  app.py  config.py
src/dmm_x_poster/db/: models.py
src/dmm_x_poster/services/: __init__.py  dmm_api.py  image_downloader.py  scheduler.py  twitter_api.py  url_shortener.py
src/dmm_x_poster/static/css/: style.css
src/dmm_x_poster/static/js/: main.js
src/dmm_x_poster/templates/: 404.html  500.html  favorites.html  index.html  layout.html  post_detail.html  posts.html  product_detail.html  products.html  settings.html
src/migrations/versions/: 3bec4ce06d17_initial_migration.py  94e2eb125d83_initial_migration.py  c3d8b2646d45_initial_migration.py  ca66bfcfa715_initial_migration.py  f5ad250b01c2_initial_migration.py
tests/: conftest.py  test_app.py  test_dmm_api.py  test_image_downloader.py  test_models.py  test_scheduler.py  test_twitter_api.py  test_url_shotener.py
